cabal-version:       >=1.10

name:                donut-hs
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              samipourquoi
build-type:          Simple

executable donut-hs
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
  hs-source-dirs:      src
  default-language:    Haskell2010
