cabal-version:       >=1.10

name:                donut-hs
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              samipourquoi
build-type:          Simple

executable donut-hs
  main-is:             Main.hs
  other-modules:       Data.Vector
  build-depends:       base >=4.14 && <4.15,
                       terminal-size
  hs-source-dirs:      src
  default-language:    Haskell2010
